<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    android:layout_margin="20dp"
    app:cardCornerRadius="20dp"
    android:backgroundTint="?attr/background"
    android:background="@color/transparent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:textSize="18dp"
            android:text="@string/today"
            android:id="@+id/info"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mood"
            android:layout_centerHorizontal="true"
            android:maxLines="1"
            android:hint="@string/mood_hint"
            android:textColorHint="@color/gray"
           android:padding="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="10dp"
     style="@style/Text"
            android:elevation="4dp"
            android:background="@drawable/textview_background"
            />
        <EditText
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:elevation="4dp"
            android:layout_above="@id/l1"
            android:layout_height="wrap_content"
            android:id="@+id/note"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:layout_below="@+id/mood"
            android:layout_centerHorizontal="true"
            android:hint="@string/happened_hint"
            android:maxLines="4"
            android:text=""
            style="@style/Text"
            android:textColorHint="@color/gray"
            android:padding="15dp"
            android:background="@drawable/textview_background"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/l1"
            android:padding="4dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@id/save"
            android:background="@drawable/textview_background"
            android:backgroundTint="?attr/backgroundColor"
            >

            <RadioGroup

                android:layout_centerHorizontal="true"
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:id="@+id/radioResisted"
                    android:checked="true"
                    android:buttonTint="@color/purple"
                    android:layout_height="wrap_content"
                    android:text="@string/resisted"
                    style="@style/Text"/>
                <RadioButton
                    android:buttonTint="@color/red_for_buttons"
                    android:id="@+id/radioDidNotResist"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/didnt_resist"
                    style="@style/Text"/>
            </RadioGroup>
        </RelativeLayout>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
   android:layout_alignStart="@+id/note"
    android:text="@string/cancel"
    android:elevation="8dp"
    android:backgroundTint="@color/purple"
    android:layout_marginBottom="5dp"
    android:id="@+id/cancel"/>
        <Button
            android:elevation="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@+id/note"
            android:text="@string/save"
            android:backgroundTint="@color/purple"
            android:layout_marginBottom="5dp"
            android:id="@+id/save"/>
    </RelativeLayout>


</androidx.cardview.widget.CardView>