<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Screan"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".Fragments.AddHabitFragment">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:layout_above="@id/name_EditText"
    android:src="@drawable/habits_image"
    />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/black"
        android:hint="@string/hint_bad_habit"
        android:textAlignment="center"
        android:maxLines="1"
        android:layout_above="@+id/emergency_EditText"
        android:textColorHint="@color/gray"
        android:layout_marginTop="10dp"
        style="@style/Text"
        android:imeOptions="actionDone"
        android:id="@+id/name_EditText"
        />

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="15sp"
        android:hint="@string/hint_effect_on_life"
        android:textColorHint="@color/white"
        app:backgroundTint="?attr/color"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/lastTime_TextView"
        android:id="@+id/cat_EditText"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:imeOptions="actionDone"
        android:layout_height="50dp"
        android:backgroundTint="@color/black"
        android:layout_above="@+id/cat_EditText"
        style="@style/Text"
        android:textAlignment="center"
        android:hint="@string/hint_emergency_message"
        android:textColorHint="@color/gray"
        android:layout_marginTop="20dp"
        android:maxLines="5"
        android:id="@+id/emergency_EditText"

        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:padding="5dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/addHabitBtn"
        android:textAlignment="center"
        android:textSize="15sp"
        android:hint="@string/hint_last_time"
        android:textColorHint="@color/white"
        android:backgroundTint="?attr/color"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/v1"
        android:id="@+id/lastTime_TextView"

        />
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/v1"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:padding="5dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="15sp"
        android:hint="@string/hint_reminder_time"
        android:textColorHint="@color/white"
        android:backgroundTint="?attr/color"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/v1"
        android:layout_above="@id/addHabitBtn"
        android:id="@+id/reminderTime_TextView"
        />

    <Button
        android:layout_alignParentBottom="true"
        android:elevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/text_all_done"
        android:backgroundTint="@color/blue"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:id="@+id/addHabitBtn"

        />

</RelativeLayout>