<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/goal_background_item"
    android:backgroundTint="?attr/backgroundColor"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_mode"
        android:textStyle="bold"
        android:textSize="18sp"
        style="@style/Text" />

    <Switch
        android:id="@+id/modeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        style="@style/Text"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginVertical="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textStyle="bold"
        android:textSize="18sp"
        style="@style/Text" />

    <RadioGroup
        android:id="@+id/langGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/langEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="English"
            style="@style/Text"/>

        <RadioButton
            android:id="@+id/langFrench"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Frensh"
            style="@style/Text" />
        <RadioButton
            android:id="@+id/langArabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="العربية"
           style="@style/Text"/>
    </RadioGroup>

</LinearLayout>
