<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    android:layout_margin="20dp"
    app:cardCornerRadius="20dp"
    android:backgroundTint="?attr/background"
    android:background="@color/transparent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:textSize="18dp"
            android:visibility="gone"
            android:text="@string/today"
            android:id="@+id/title"
            />
        <EditText
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_centerHorizontal="true"
            android:maxLines="1"
            android:hint="@string/hint_emergency_message"
            android:textColorHint="@color/gray"
            android:padding="15dp"
            android:layout_below="@id/title"
            android:layout_marginHorizontal="10dp"
            style="@style/Text"
            android:elevation="4dp"
            android:background="@drawable/textview_background"
            />
        <TextView
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emer_msg"
            android:layout_centerHorizontal="true"
            android:maxLines="3"
        android:visibility="gone"
            android:padding="15dp"
            android:layout_below="@id/title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"
            style="@style/Text"
            android:elevation="4dp"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText"
            android:text="@string/cancel"
            android:layout_alignStart="@id/editText"
            android:elevation="8dp"
            android:backgroundTint="@color/purple"
            android:layout_marginBottom="5dp"
            android:id="@+id/cancel"/>
        <Button
            android:elevation="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_below="@id/editText"
            android:layout_alignEnd="@id/editText"
            android:text="@string/save"
            android:backgroundTint="@color/purple"
            android:layout_marginBottom="5dp"
            android:id="@+id/save"/>
    </RelativeLayout>


</androidx.cardview.widget.CardView>